--- a/templates/home.html
+++ b/templates/home.html
@@ -9,8 +9,10 @@
   <body>
     <table>
       <tr>
-	<td>name</td><td>status</td><td>processes</td>
-	<td>memory</td><td>cpu time</td><td>actions</td>
+	<td>name</td><td>status</td>
+	<td>memory</td><td>cpu time</td>
+	<td>network device</td><td>ipaddr</td><td>rootfs</td>
+	<td>config</td>
       </tr>
       % for name, info in infos.iteritems():
       <tr>
@@ -18,20 +20,16 @@
 	<td>
 	% if info['state'] == 'RUNNING':
 	  <a href="/shutdown/${name}">${info['state']}</a>
-	  <a href="/stop/${name}">stop</a>
-	  <a href="/reboot/${name}">reboot</a>
 	% elif info['state'] == 'STOPPED':
 	  <a href="/start/${name}">${info['state']}</a>
 	% endif
 	</td>
-	<td>${info.get('processes')}</td>
-	<td>${info.get('memstr')}</td><td>${info.get('cpu_usage')}</td>
-	<td>
-	% if info['state'] == 'STOPPED':
-	  <a href="/clone/${name}">clone</a>
-	  <a href="/destory/${name}">destory</a>
-	% endif
-	</td>
+	<td>${rs(info.get('memory'))}</td>
+	<td>${info.get('cpu_usage')}</td>
+	<td>${info.get('netset')}</td>
+	<td>${'%s/%s' % info.get('ipaddr', [('',''),])[0]}</td>
+	<td>${info.get('lxc.rootfs', [])[-1]}</td>
+	<td><a href="/config/${name}">config</a></td>
       </tr>
       % endfor
     </table>
