--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <table>
       <tr>
 	<td>name</td><td>status</td><td>processes</td>
-	<td>memory</td><td>cpu time</td>
+	<td>cache</td><td>rss</td><td>memory</td><td>cpu time</td>
 	<td>network device</td><td>ipaddr</td><td>rootfs</td>
 	<td>config</td>
       </tr>
@@ -19,19 +19,40 @@
 	<td><a href="/info/${name}">${name}</a></td>
 	<td>
 	% if info['state'] == 'RUNNING':
-	  <a href="/shutdown/${name}">${info['state']}</a>
+	  <a href="/shutdown/${name}">
 	% elif info['state'] == 'STOPPED':
-	  <a href="/start/${name}">${info['state']}</a>
+	  <a href="/start/${name}">
 	% endif
+	  ${info['state']}</a>
 	</td>
 	<td>
 	  % if info['state'] == 'RUNNING':
 	    <a href="/ps/${name}">${len(info['pids'])}</a>
 	  % else:
-	    0
+	    --
 	  % endif
 	</td>
-	<td>${rs(info.get('memory'))}</td>
+	<td>
+	  % if info['state'] == 'RUNNING':
+	    ${rs(info.get('cache'))}
+	  % else:
+	    --
+	  % endif
+	</td>
+	<td>
+	  % if info['state'] == 'RUNNING':
+	    ${rs(info.get('rss'))}
+	  % else:
+	    --
+	  % endif
+	</td>
+	<td>
+	  % if info['state'] == 'RUNNING':
+	    ${rs(info.get('memory'))}
+	  % else:
+	    --
+	  % endif
+	</td>
 	<td>${info.get('cpu_usage')}</td>
 	<td>${info.get('netset')}</td>
 	<td>${'%s/%s' % info.get('ipaddr', [('',''),])[0]}</td>
