--- a/templates/home.html
+++ b/templates/home.html
@@ -10,9 +10,8 @@
     <table>
       <tr>
 	<td>name</td><td>status</td><td>processes</td>
-	<td>cache</td><td>rss</td><td>memory</td><td>cpu time</td>
-	<td>network device</td><td>ipaddr</td><td>rootfs</td>
-	<td>config</td>
+	<td>cache</td><td>rss</td><td>cpu time</td>
+	<td>ipaddr</td><td>config</td>
       </tr>
       % for name, info in infos.iteritems():
       <tr>
@@ -33,30 +32,19 @@
 	  % endif
 	</td>
 	<td>
-	  % if info['state'] == 'RUNNING':
-	    ${rs(info.get('cache'))}
-	  % else:
-	    --
-	  % endif
+	  ${rs(info.get('cache')) or '--'}
 	</td>
 	<td>
-	  % if info['state'] == 'RUNNING':
-	    ${rs(info.get('rss'))}
-	  % else:
-	    --
-	  % endif
+	  ${rs(info.get('rss')) or '--'}
 	</td>
+	<td>${info.get('cpu_usage') or '--'}</td>
 	<td>
-	  % if info['state'] == 'RUNNING':
-	    ${rs(info.get('memory'))}
+	  % if info.get('ipaddr'):
+	    ${' '.join('%s/%s' % i for i in info.get('ipaddr'))}
 	  % else:
 	    --
 	  % endif
 	</td>
-	<td>${info.get('cpu_usage')}</td>
-	<td>${info.get('netset')}</td>
-	<td>${'%s/%s' % info.get('ipaddr', [('',''),])[0]}</td>
-	<td>${info.get('lxc.rootfs', [])[-1]}</td>
 	<td><a href="/config/${name}">config</a></td>
       </tr>
       % endfor
