* 修正了aufs里面双重clone的问题 * lxc-clone本身有个错误，当clone的对象中包含lxc.mount，而且后面紧跟一个\t的时候，会处理错误 * 调整了模板细节   未测试

--- a/templates/info.html
+++ b/templates/info.html
@@ -15,8 +15,12 @@
       <a href="/clone/${nm}/">clone</a>
       <a href="/merge/${nm}">merge</a>
     % endif
-      <a href="/clone/${nm}/?mode=fast">fast clone</a>
-      <a href="/destroy/${nm}">destroy</a>
+    <a href="/clone/${nm}/?mode=fast">fast clone</a>
+    <a href="/destroy/${nm}">destroy</a>
+    <form method="POST" action="/attach/${nm}">
+      <input type="text" name="cmd"/>
+      <input type="submit" value="run"/>
+    </form>
     <table>
       <tr>
 	<td>status</td><td>pid</td><td>disk usage</td>
