--- a/templates/ps.html
+++ b/templates/ps.html
@@ -21,7 +21,7 @@
 	<td>${p[4]}</td>
 	<td>${p[5]}</td>
 	<td>${p[7]}</td>
-	<td>${p[10]}</td>
+	<td><pre>${p[10]}</pre></td>
       </tr>
       % endfor
     </table>
