--- a/templates/config.html
+++ b/templates/config.html
@@ -4,35 +4,86 @@
     <title>home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="author" content="shell">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <script>
+    $(document).ready(function(){
+	p = $(location).attr('href').split('/');
+	var name = p[p.length - 1];
+	$.ajax({
+	    url: '/fstab/' + name + '.json',
+	    cache: false,
+	    dataType: "json",
+	    success: function(data){
+		if (data['aufs']){
+		    $.each(data['aufs'], function(n, v){
+			newtr = '<tr>';
+			newtr += '<td>' + v[1] + '</td>';
+			newtr += '<td>' + v[0] + '</td>';
+			newtr += '</tr>';
+			$("#aufs").append(newtr);
+		    });
+		}
+
+		$.each(data['fstab'], function(n, v){
+		    newtr = '<tr>';
+		    newtr += '<td>' + v[0] + '</td>';
+		    newtr += '<td>' + v[1] + '</td>';
+		    newtr += '<td>' + v[2] + '</td>';
+		    newtr += '<td>' + v[3] + '</td>';
+		    newtr += '</tr>';
+		    $("#fstab").append(newtr);
+		});
+	    },
+	});
+
+	$.ajax({
+	    url: '/config/' + name + '.json',
+	    cache: false,
+	    dataType: "json",
+	    success: function(data){
+		$.each(data, function(n, l){
+		    $.each(l, function(i, v){
+			newtr = '<tr>';
+			newtr += '<td>' + n + '</td>';
+			newtr += '<td>' + v + '</td>';
+			newtr += '</tr>';
+			$("#config").append(newtr);
+		    });
+		});
+	    },
+	});
+    });
+    </script>
   </head>
 
   <body>
-    % if aufs:
-    aufs:
-    <table>
-      <tr><td>attr</td><td>path</td></tr>
-      % for i in aufs:
-      <tr><td>${i[1]}</td><td>${i[0]}</td></tr>
-      % endfor
-    </table>
-    % endif
-    fstab:
     <table>
       <tr>
-	<td>source</td><td>target</td><td>filesystem</td><td>options</td>
+	<td>
+	  <table id="config">
+	    <thead>
+	      <tr><td>name</td><td>value</td></tr>
+	    </thead>
+	    <tbody></tbody>
+	  </table>
+	</td>
+	<td>
+	  <table id="aufs">
+	    <thead>
+	      <tr><td>attr</td><td>path</td></tr>
+	    </thead>
+	    <tbody></tbody>
+	  </table>
+	  <table id="fstab">
+	    <thead>
+	      <tr>
+		<td>source</td><td>target</td><td>filesystem</td><td>options</td>
+	      </tr>
+	    </thead>
+	    <tbody></tbody>
+	  </table>
+	</td>
       </tr>
-      % for r in fstab:
-      <tr>
-	<td>${r[0]}</td><td>${r[1]}</td><td>${r[2]}</td><td>${r[3]}</td>
-      </tr>
-      % endfor
     </table>
-    <ul>
-    % for name, vs in sorted(cfg.iteritems(), key=lambda i: i[0]):
-      % for v in vs:
-        <li>${name}=${v}</li>
-      % endfor
-    % endfor
-    </ul>
   </body>
 </html>
