--- a/templates/info.html
+++ b/templates/info.html
@@ -4,42 +4,86 @@
     <title>home</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="author" content="shell">
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.5.2.min.js"></script>
+    <script>
+    function readable_size(s){
+	if (! s) {
+	    return "--"
+	}
+	s = s / 1024 / 1024;
+	return s.toFixed(0) + " MB"
+    }
+    $(document).ready(function(){
+	p = $(location).attr('href').split('/');
+	var name = p[p.length - 1];
+	$("form#command").attr('action', '/attach/' + name);
+	$.ajax({
+	    url: '/info/' + name + '.json',
+	    cache: false,
+	    dataType: "json",
+	    success: function(data){
+		if (data['state'] == "RUNNING") {
+		    $("#menu").append('<li><a href="/stop/' + name + '\">stop</a></li>');
+		    $("#menu").append('<li><a href="/reboot/' + name + '\">reboot</a></li>');
+		} else if (data['state'] == "STOPPED") {
+		    $("#menu").append('<li><a id="clone" href="#">clone</a></li>');
+		    $("#menu").append('<li><a href="/merge/' + name + '">merge</a></li>');
+		}
+		$("#menu").append('<li><a id="fastclone" href="#">fast clone</a></li>');
+		$("#menu").append('<li><a href="/destroy/' + name + '">destroy</a></li>');
+
+		$("#clone").click(function(){
+		    if (! $("#container_name").val()) {
+			alert("container name is empty");
+		    } else {
+			location.href='/clone/' + name + '/' + $("#container_name").val();
+		    }
+		    return false;
+		});
+		$("#fastclone").click(function(){
+		    if (! $("#container_name").val()) {
+			alert("container name is empty");
+		    } else {
+			location.href='/clone/' + name + '/' + $("#container_name").val() + '?mode=fast';
+		    }
+		    return false;
+		});
+
+		$("#info tbody").append("<tr><td>status</td><td>" + data['state'] + "</td></tr>");
+		$("#info tbody").append("<tr><td>pid</td><td>" + data['pid'] + "</td></tr>");
+		$("#info tbody").append("<tr><td>disk usage</td><td>" + data['diskusage'] + " MB</td></tr>");
+		if (data['state'] == "RUNNING") {
+		    $("#info tbody").append("<tr><td>cpu</td><td>" + data['cpu_usage'] + "</td></tr>");
+		    $("#info tbody").append("<tr><td>user</td><td>" + data['user'] + "</td></tr>");
+		    $("#info tbody").append("<tr><td>system</td><td>" + data['system'] + "</td></tr>");
+		    $("#info tbody").append("<tr><td>memory</td><td>" + readable_size(data['memory']) + "</td></tr>");
+		    $("#info tbody").append("<tr><td>cache</td><td>" + readable_size(data['cache']) + "</td></tr>");
+		    $("#info tbody").append("<tr><td>rss</td><td>" + readable_size(data['rss']) + "</td></tr>");
+		}		
+	    },
+	});
+    });
+    </script>
   </head>
 
   <body>
-    <input type="text" name="container_name"/>
-    % if info['state'] == 'RUNNING':
-      <a href="/stop/${nm}">stop</a>
-      <a href="/reboot/${nm}">reboot</a>
-    % elif info['state'] == 'STOPPED':
-      <a href="/clone/${nm}/">clone</a>
-      <a href="/merge/${nm}">merge</a>
-    % endif
-    <a href="/clone/${nm}/?mode=fast">fast clone</a>
-    <a href="/destroy/${nm}">destroy</a>
-    <form method="POST" action="/attach/${nm}">
-      <input type="text" name="cmd"/>
-      <input type="submit" value="run"/>
-    </form>
     <table>
       <tr>
-	<td>status</td><td>pid</td><td>disk usage</td>
-	% if info['state'] == 'RUNNING':
-	<td>cpu</td><td>user</td><td>system</td>
-	<td>memory</td><td>cache</td><td>rss</td>
-	% endif
-      </tr>
-      <tr>
-	<td>${info['state']}</td><td>${info['pid']}</td>
-	<td>${info.get('diskusage')} MB</td>
-	% if info['state'] == 'RUNNING':
-	<td>${info['cpu_usage']}</td>
-	<td>${info.get('user')}</td>
-	<td>${info.get('system')}</td>
-	<td>${rs(info.get('memory'), 'MB')}</td>
-	<td>${rs(info.get('cache'))}</td>
-	<td>${rs(info.get('rss'))}</td>
-	% endif
+	<td>
+	  <table id="info">
+	    <thead><tr><td>name</td><td>value</td></tr></thead>
+	    <tbody></tbody>
+	  </table>
+	</td>
+	<td>
+	  <input type="text" id="container_name"/>
+	  <ul id="menu">
+	    <li><a href="/">back</a></li>
+	  </ul>
+	  <form id="command" method="POST">
+	    <input type="text" name="cmd"/><input type="submit" value="run"/>
+	  </form>
+	</td>
       </tr>
     </table>
   </body>
